--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+node_modules/
+out/
+dist/
+.vscode-test/
+.vscode-test-web/
+test/testFixture/.vscode
+*.vsix
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+test-resources
+yarn-error.log
+.github/
+!.vscode/
