--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,6 +1,18 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+    inputs:
+      patch:
+        description: 'Patch the existing extension in VS Code Marketplace'
+        type: boolean
+        required: true
+        default: false
+      preRelease:
+        description: 'Pre release the existing extension in VS Code Marketplace'
+        type: boolean
+        required: true
+        default: false
 jobs:
     build:
       runs-on: ubuntu-latest
@@ -17,11 +29,17 @@ jobs:
         - run: cd ..
         - run: yarn --frozen-lockfile
         - run: npm install --global vsce
-        - name: "Patching the existing extension in VS Code Marketplace"
-          if: ${{ github.event.inputs.patch == 'true' }}
-          run: vsce publish --pre-release -p ${{ secrets.VSCE_TOKEN }}
-        - name: "Publishing in VS Code Marketplace"
+        - name: "Patch the pre released extension in VS Code Marketplace"
           if: ${{ github.event.inputs.patch == 'true' }}
           run: vsce publish patch --pre-release -p ${{ secrets.VSCE_TOKEN }}
+        - name: "Pre release in VS Code Marketplace"
+          if: ${{ github.event.inputs.patch == 'false' }}
+          run: vsce publish --pre-release -p ${{ secrets.VSCE_TOKEN }}
+        - name: "Release the extension in VS Code Marketplace"
+          if: ${{ github.event.inputs.patch == 'true' && github.event.inputs.preRelease == 'false' }}
+          run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
+        - name: "Patch the released version in VS Code Marketplace"
+          if: ${{ github.event.inputs.patch == 'true' && github.event.inputs.preRelease == 'false' }}
+          run: vsce publish patch -p ${{ secrets.VSCE_TOKEN }}
 
 
