--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -16,15 +16,12 @@ on:
 jobs:
     build:
       runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          node-version: [20.x]
       steps:
         - uses: actions/checkout@v3
-        - name: Use Node.js ${{ matrix.node-version }} building the extension
+        - name: Use Node.js
           uses: actions/setup-node@v3
           with:
-            node-version: ${{ matrix.node-version }}
+            node-version: '18.x'
         - run: cd schema/
         - run: cd ..
         - run: yarn --frozen-lockfile
