--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -27,13 +27,13 @@ jobs:
         - run: yarn --frozen-lockfile
         - run: npm install --global vsce
         - name: "Patch the pre released extension in VS Code Marketplace"
-          if: ${{ github.event.inputs.patch == 'true' }}
+          if: ${{ github.event.inputs.patch == 'true' && github.event.inputs.preRelease == 'true' }}
           run: vsce publish patch --pre-release -p ${{ secrets.VSCE_TOKEN }}
         - name: "Pre release in VS Code Marketplace"
-          if: ${{ github.event.inputs.patch == 'false' }}
+          if: ${{ github.event.inputs.patch == 'false' && github.event.inputs.preRelease == 'true' }}
           run: vsce publish --pre-release -p ${{ secrets.VSCE_TOKEN }}
         - name: "Release the extension in VS Code Marketplace"
-          if: ${{ github.event.inputs.patch == 'true' && github.event.inputs.preRelease == 'false' }}
+          if: ${{ github.event.inputs.patch == 'false' && github.event.inputs.preRelease == 'false' }}
           run: vsce publish -p ${{ secrets.VSCE_TOKEN }}
         - name: "Patch the released version in VS Code Marketplace"
           if: ${{ github.event.inputs.patch == 'true' && github.event.inputs.preRelease == 'false' }}
